# rano

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
src/: browser.rs  chars.rs  color.rs  cut.rs  definitions.rs  editor.rs  files.rs  global.rs  help.rs  history.rs  main.rs  movement.rs  nano.rs  prompt.rs  rcfile.rs  search.rs  text.rs  utils.rs  winio.rs
